--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador Recetas Comida</title>
+    <title>Buscador Recetas Comida Johaly Fls</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger bg-gradient p-3">
         <div class="container-fluid">
-            <a class="navbar-brand fs-4" href="index.html">Buscador de Recetas</a>
+            <a class="navbar-brand fs-4" href="index.html">Buscador de Recetas Johaly</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
